--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,22 +1,31 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
+*{
+  font-family: 'Inter', sans-serif;
+}
 body {
   margin: 0;
-  font-family :Inter, sans-serif;
   color: white;
 }
-
+.top{
+  background-color: #0b0e6a;
+  height: 50px;
+}
 .total{
   width: 65%;
-  margin: 50px auto;
+  margin: auto;
   text-align: center;
   
 }
 .dark_blue_background{
+
   position: absolute;
   left: 0;
-  top: 0;
+  top: 50px;
   width: 100%;
   height: 400px;
-  background-color: #0A146E;
+  background: url(../images/back.png);
   z-index: -1;
 }
 
@@ -44,15 +53,16 @@ body {
   display: flex;
   align-items: center;
 }
-.buttons{
+.buttons, .section_button, .convert_button, .tools_button{
+  border: none;
+  cursor: pointer;
+  border-radius: 6px;
+  font-size: 15px;
+}
+.buttons {
   background-color: transparent;
   color: white;
-  border: none;
-  font-size: 15px;
-  cursor: pointer;
   padding: 10px 15px;
-  font-weight: 400;
-  border-radius: 6px;
 }
 hr{
   height: 20px;
@@ -69,4 +79,202 @@ button:hover{
 
 #top_p{
   margin-top: -15px;
+  margin-bottom: 40px;
+}
+
+.Section, .tools_definitions{
+  -webkit-box-shadow: 4px 4px 19px -6px rgba(0,0,0,0.54);
+  -moz-box-shadow: 4px 4px 19px -6px rgba(0,0,0,0.54);
+  box-shadow: 4px 4px 19px -6px rgba(0,0,0,0.54);
+}
+
+.Section{
+  height:300px;
+  background-color: white;
+  width: 95%;
+  margin: 0 auto ;
+  border-radius: 5px;
+}
+.top_cont{
+  width: 100%;
+}
+.section_buttons_div{
+  display: flex;
+  width: 100%;
+  height: 60px;
+  background-color: white;
+  border-radius: 5px;
+}
+.section_top{
+  width: 25%;
+}
+.section_button{
+  width: 100%;
+  color:rgb(55, 80, 110);
+  background-color: #F2F7FE;
+
+}
+.section_button:hover{
+  box-shadow: none;
+}
+.section_button:focus{
+  color: rgb(0, 111, 232);
+  background-color: white;
+}
+.button_text{
+  display: inline-block;
+  font-weight:400;
+  font-size:14px;
+  margin-left: 10px;
+}
+#first_bottom{
+  border-top-left-radius: 5px;
+}
+#last_bottom{
+  border-top-right-radius: 5px;
+}
+
+.Content{
+  margin: auto;
+  width: 90%; 
+}
+
+.convert{
+  display: flex;
+  margin: 40px auto;
+  justify-content: space-between;
+  
+}
+.comp_full{
+  width: 30%;
+  text-align: left;
+  
+}
+.comp_text{
+  color: black;
+  text-align: left;
+  font-weight: 700;
+  line-height: 1px;
+}
+.change, .select_class{
+  -webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.75);
+}
+.select_class{
+  border:1px solid #767676;
+  width: 100%;
+  height: 40px;
+  border-radius: 3px;
+}
+#amount{
+  border-color: #767676;
+  height: 35px;
+  width: 98%;
+}
+
+.change{
+  width: 2.2%;
+  border-radius: 35px;
+  height: 50%;
+  padding: 8px;
+  margin: 30px 0px ;
+  border: 1px solid gray;
+  cursor: pointer;
+}
+
+.convert_footer{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: -30px;
+  margin-bottom: 100px;
+}
+.convert_footer_left{
+  width: 50%;
+  display: flex;
+  text-align: left;
+  color: rgb(55, 80, 110);
+  font-size:12px;
+  line-height:18px;
+  background-color: #F2F7FE;
+  border-radius: 6px;
+  padding: 2px;
+}
+#convert_a{
+  text-decoration: none;
+  color:#1A86FA;
+}
+#info_icon{
+  margin: auto 5px;
+  padding: 5px;
+}
+.convert_footer_right{
+  
+  margin: auto 0;
+}
+.convert_button{
+  
+  background-color: #1A86FA;
+  color: white;
+  border: none;
+  padding: 10px 30px;
+  font-weight: 700;
+}
+
+/* TOOLS */
+
+
+.tools{
+  margin: 50px 0 200px 0;
+  display: flex;
+  color: #0b0e6a ;
+  justify-content: space-around;
+  
+}
+
+.tools_definitions{
+  position: relative;
+  height: 350px;
+  width: 21%;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#tools_h2{
+  margin-top: 100px;
+}
+
+.tools_titles{
+  color: #0b0e6a ;
+  line-height:26px;
+}
+
+.tools_pg{
+  font-size:16px;
+  color:#141e37;
+  line-height:27.2px;
+  text-align: left;
+}
+
+.tools_button{
+  background-color: white;
+  color: #1A86FA;
+  border : 2px solid #1A86FA;
+  position: absolute;
+  bottom: 8%;
+  width: 80%;
+  left: 30px;
+  padding: 10px 30px;
+  font-weight: 700;
+}
+
+.tools_button:hover{
+  background-color: #D9EAFC;
+}
+
+.tools_icons{
+  font-size: 48px;
+  background-color: #1A86FA;
+  margin-top: 1000px;
 }
