--- a/public/css/index.css
+++ b/public/css/index.css
@@ -53,7 +53,7 @@ body {
   display: flex;
   align-items: center;
 }
-.buttons, .section_button, .convert_button, .tools_button{
+button{
   border: none;
   cursor: pointer;
   border-radius: 6px;
@@ -277,4 +277,17 @@ button:hover{
   font-size: 48px;
   background-color: #1A86FA;
   margin-top: 1000px;
+}
+
+
+/*   DATA  API   */
+
+.data_api_back{
+  position: absolute;
+  left: 0;
+  top: 1300px;
+  width: 100%;
+  height: 300px;
+  background-color: #0b0e6a;
+  z-index: -1;
 }
