--- a/public/css/index.css
+++ b/public/css/index.css
@@ -34,7 +34,6 @@ body {
   height: 70px;
 }
 .navbar{
-  position: flex;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -64,10 +63,13 @@ button{
   color: white;
   padding: 10px 15px;
 }
+.buttons:hover{
+  background-color: #3B438B;
+}
 hr{
   height: 20px;
 }
-button:hover{
+.section_button:hover{
   background-color: rgba(255,255,255,.25);
   box-shadow: 0 0 1rem rgba(0,0,0,.6);
 }
@@ -169,6 +171,7 @@ button:hover{
   width: 100%;
   height: 40px;
   border-radius: 3px;
+  cursor: pointer;
 }
 #amount{
   border-color: #767676;
@@ -228,7 +231,7 @@ button:hover{
 
 
 .tools{
-  margin: 50px 0 200px 0;
+  margin: 50px 0 80px 0;
   display: flex;
   color: #0b0e6a ;
   justify-content: space-around;
@@ -237,7 +240,8 @@ button:hover{
 
 .tools_definitions{
   position: relative;
-  height: 350px;
+  display: flex;
+  flex-direction: column;
   width: 21%;
   padding: 20px;
   border-radius: 10px;
@@ -264,9 +268,9 @@ button:hover{
   color: #1A86FA;
   border : 2px solid #1A86FA;
   position: absolute;
-  bottom: 8%;
-  width: 80%;
+  bottom: 5%;
   left: 30px;
+  width: 80%;
   padding: 10px 30px;
   font-weight: 700;
 }
@@ -292,12 +296,157 @@ button:hover{
 
 /*   DATA  API   */
 
+.data_api{
+  margin: 200px auto;
+}
 .data_api_back{
   position: absolute;
   left: 0;
-  top: 1300px;
+  top: 1900px;
   width: 100%;
   height: 300px;
   background-color: #0b0e6a;
   z-index: -1;
+}
+
+
+/* MOBILE APP */
+
+.MobileAppClass{
+  margin: 200px auto;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+}
+
+.MobileAppRight{
+  width: 40%;
+  margin-left: 80px;
+}
+
+.scan_section{
+  display: flex;
+}
+#scan_text{
+  margin: auto 10px ;
+  font-size: 12px;
+  font-weight: 600;
+  color:#2e3c57;
+
+}
+
+#bottom_text{
+  font-size:16px;
+  font-weight:600;
+  color:#141e37;
+}
+
+.mobile_app_icons{
+  position: relative;
+  right: 10px;
+}
+
+.app_icon{
+  cursor: pointer;
+}
+
+#mobile_h2{
+  margin-top: -5px;
+  margin-bottom: 40px;
+}
+
+
+/* Footer */
+
+.Footer_Background{
+  background-color: #0b0e6a;
+  text-align: left;
+ 
+}
+
+.total h2{
+  text-align: center;
+}
+
+ul{
+  list-style-type: none;
+  padding-left: 0;
+}
+
+ul li{
+  padding: 3px 0;
+}
+
+ul li a{
+  text-decoration: none;
+}
+ul li a:hover{
+  text-decoration: underline;
+}
+
+.Footer_Background .total{
+  text-align: left;
+  padding: 60px 0;
+}
+
+.footer_first_div{
+  display: flex;
+  width: 100%;
+  margin: 40px 0;
+  justify-content: space-around;
+}
+
+.footer_first_div div{
+  width: 25%;
+}
+
+.footer_first_div div select{
+  background-color: transparent;
+  border: none;
+  color: white;
+}
+
+.footer_first_div div select option{
+  color: #0b0e6a;
+}
+
+.footer_icons{
+  margin: auto;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.footer_icons i{
+  padding: 10px;
+}
+
+.footer_second_div{
+  display: flex;
+  width: 100%;
+}
+
+.footer_second_div div{
+  width: 25%;
+}
+
+.footer_third_div ul{
+  width: 100%;
+  text-align: left;
+  
+}  
+
+.footer_third_div ul li{
+  display: inline-block;
+  padding-right: 20px;
+
+}
+
+.total div ul li a{
+  color: white;
+  font-size: 12px;
+}
+
+.last_item{
+  margin-top: 60px;
 }
