--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,6 +12,10 @@ body {
   background-color: #0b0e6a;
   height: 50px;
 }
+.topx{
+  background-color: #0b0e6a;
+  height: 50px;
+}
 .total{
   width: 65%;
   margin: auto;
@@ -34,11 +38,15 @@ body {
   height: 70px;
 }
 .navbar{
-  width: 100%;
+  background-color: #0b0e6a;
+
+}
+.navbar .total{
+  width: 75%;
+  
+  background-color: #0b0e6a;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 60px;
+  justify-content: space-around;
 }
 .navbar_left_side{
   display: flex;
@@ -76,7 +84,6 @@ hr{
 
 #top_h1{
   font-size: 30px;
-  margin-top: -15px;
 }
 
 #top_p{
@@ -97,7 +104,8 @@ hr{
   clear: both;
   background-color: white;
   width: 95%;
-  margin: 0 auto ;
+  margin:  auto ;
+
   border-radius: 5px;
 }
 .top_cont{
